--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,26 +1,37 @@
 <!doctype html>
 <html>
-<head><meta charset="utf-8"><title>Chat</title></head>
+<head>
+  <meta charset="utf-8">
+  <title>Chat</title>
+</head>
 <body>
 <textarea id="chat" rows="10" cols="50"></textarea><br>
 <input id="msg"/><button id="send">Send</button>
+<script src="lib/ipfs-http-client.min.js"></script>
+<script src="lib/orbitdb.min.js"></script>
 <script type="module">
-import ipfsClient from 'https://cdn.jsdelivr.net/npm/ipfs-http-client@60.0.1/dist/index.min.js';
-import orbitdbMod from 'https://cdn.jsdelivr.net/npm/@orbitdb/core@3.0.2/dist/orbitdb.min.js';
-const { create } = ipfsClient;
-const { OrbitDB } = orbitdbMod;
-// connect to the IPFS HTTP API exposed by the docker-compose stack
+const { create } = IpfsHttpClient;
+const { createOrbitDB } = OrbitDB;
 const ipfs = create({ url: 'http://localhost:5001' });
-const orbitdb = await OrbitDB.createInstance(ipfs);
-// use the backend API running on localhost:3000
+const orbitdb = await createOrbitDB({ ipfs });
 const res = await fetch('http://localhost:3000/address');
 const { address } = await res.json();
-const db = await orbitdb.feed(address);
-await db.load();
-const chat = document.getElementById('chat');
-function render(){chat.value=db.iterator({limit:-1}).collect().map(e=>e.payload.value.text).join('\n');}
-db.events.on('replicated', render);render();
-document.getElementById('send').onclick=async()=>{const text=document.getElementById('msg').value;await fetch('http://localhost:3000/messages',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({text})});document.getElementById('msg').value='';};
+const db = await orbitdb.open(address);
+await db.sync();
+function render() {
+  document.getElementById('chat').value = (await db.all()).map(e=>e.text).join('\n');
+}
+db.events.on('update', render);
+render();
+document.getElementById('send').onclick = async () => {
+  const text = document.getElementById('msg').value;
+  await fetch('http://localhost:3000/messages', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ text })
+  });
+  document.getElementById('msg').value = '';
+};
 </script>
 </body>
 </html>
