Fix browser example and cleanup

--- a/orbitdb-webapp/index.html
+++ b/orbitdb-webapp/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <p>PeerID: <span id="peer-id"></span></p>
+  <label>Multiaddrs:<input id="multiaddrs" size="60" readonly></label>
   <label>Database address:<input id="db-address" size="40" readonly></label>
   <ul id="entries"></ul>
   <form id="form">
@@ -15,3 +16,4 @@
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
+
